Template/js/template.css
/* misc */
.dialogButtons{text-align: right;}
.exfHidden{display:none !important}

/* Bootstrap customization */
ul.datalist li {padding: 4px 0;}
.tab-content>.tab-pane {height: initial !important;}
.exf-input>.form-group {margin-bottom: initial;}
.modal-body-content-wrapper>.nav-tabs-custom {margin-top: -15px;margin-bottom: -15px}
.modal-footer {text-align: left}
.datalist {z-index: 2000}
.dropdown {display: inline-block}
.modal-footer .dropdown+.btn, .modal-footer .btn+.dropdown {
    margin-left: 3px;
}

/* Dialogs */
.modal-body > .nav-tabs-custom {margin-bottom: 0; box-shadow: none;}
.nav-tabs-custom>.nav-tabs>li:first-of-type.active>a {border-left-color: #f4f4f4;}

/* Tabs */
.nav-tabs a[data-toggle=tab].disabled {color: #999}

/* AdminLTE customization */
.user-menu .user-image i {font-size: 25px;}
.user-menu .exf-menu .user-header i {color: #4b646f; font-size: 90px;}
.user-panel .image i {color: #4b646f; font-size: 45px;}
.box .box, .dropdown .box, .tab-pane .box {border: 0; box-shadow: none; margin-bottom: 0;}
.dropdown .exf-grid-item > .box {margin: 0 -15px 0 -15px; width: calc(100% + 30px);}

/* DataTables customization */
table.dataTable tr.detailRow table {width: initial;}
table.dataTable .detailRow table {width:initial; margin: initial;}
table.dataTable thead th {text-align: center;}
table.dataTable tfoot th.dt-body-right {padding-right: 10px;}
/* Fix useless checkboxes being shown above and below body data breaking scrolling */
.dataTables_scrollBody table.dataTable th.select-checkbox:before, .dataTables_scrollBody table.dataTable th.select-checkbox:after {display:none !important}
/* Row groups */
table.dataTable tr.group {cursor: pointer;}
/* Cell coloring */
table.dataTable td.ok{background-color: green;}
table.dataTable td.warning{background-color: yellow;}
table.dataTable td.error{background-color: red; color: white;}

.btn-advanced-filtering .label {position: absolute; top: 15px; right: 5px; text-align: center; font-size: 9px; padding: 2px 3px; line-height: .9;}

/* Context menus */
li > a > i.fa {width: 13px;}

/* jQuery NumPad */
td.nmpd-target{border: 1px solid #d2d6de !important;}

/* DataCards */
.exf-datacards .exf-data-value {margin: 2px 5px;}
.exf-datacards .placeholder {padding: 8px; line-height: 1.42857143; vertical-align: top; border-top: 1px solid #ddd; background-color: #f9f9f9;}
.exf-datacards .box {margin-bottom: 20px;}
/* Inputs */
.exface_inputgroup {border-width: 1px 0 0 0; padding: 10px 0 20px 0;}
.invalid .form-control {
	border-color: #ffa8a8;
	background-color: #fff3f3;
}
.ms-sel-ctn input, .ms-ctn input:focus {background-color: inherit !important;}

/* Toolbars and buttons */
.exf-toolbar {padding-bottom: 7px;}
.exf-toolbar .btn {margin-bottom: 3px;}
.exf-btn-group {display: inline-block}
.exf-btn-group+.dropdown, .exf-btn-group+.exf-btn-group {margin-left: 3px;}

/* sortable */
body.dragging, body.dragging * {
	cursor: move !important;
}

.dragged {
	position: absolute;
	opacity: 0.7;
	z-index: 2000;
}

ol.sortable {  
	margin: 0;
	padding: 0px;
	list-style: none;
}

ol.sortable li {
	position: relative;
	display: block;
	margin: 5px;
	padding: 5px;
	border-left: 3px solid #e6e7e8;
	color: #444;
	background: #f4f4f4;
}

ol.sortable li .checkbox {margin-top: 5px; margin-bottom: 5px;}
ol.sortable i.handle {margin: 8px 5px;}

ol.sortable li.placeholder {
	position: relative;
	margin: 5px;
	padding: 5px;
	border: 3px dashed #e6e7e8; 
	height: 37px;
}

ol.sortable li.placeholder:before {
	position: absolute;
	content: "";
	width: 0;
	height: 0;
	margin-top: -5px;
	left: -5px;
	top: -4px;
	border: 5px solid transparent;
	border-left-color: red;
	border-right: none; 
}

ol {list-style-type: none; }
ol i.icon-move {cursor: pointer; }
ol li.highlight {background: #333333; color: #999999; }
ol li.highlight i.icon-move {}

/* Navbar */
.navbar-nav > .context-menu > .dropdown-menu > li .menu > li > a {
    display: block;
    white-space: nowrap;
    border-bottom: 1px solid #f4f4f4;
}

.navbar-nav > .context-menu > .dropdown-menu {
  width: 280px;
  padding: 0 0 0 0;
  margin: 0;
  top: 100%;
}
.navbar-nav > .context-menu > .dropdown-menu > li {
  position: relative;
}
.navbar-nav > .context-menu > .dropdown-menu > li.header {
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
  background-color: #ffffff;
  padding: 7px 10px;
  border-bottom: 1px solid #f4f4f4;
  color: #444444;
  font-size: 14px;
}
.navbar-nav > .context-menu > .dropdown-menu > li.footer > a {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  font-size: 12px;
  background-color: #fff;
  padding: 7px 10px;
  border-bottom: 1px solid #eeeeee;
  color: #444 !important;
  text-align: center;
}
@media (max-width: 991px) {
  .navbar-nav > .context-menu > .dropdown-menu > li.footer > a {
    background: #fff !important;
    color: #444 !important;
  }
}
.navbar-nav > .context-menu > .dropdown-menu > li.footer > a:hover {
  text-decoration: none;
  font-weight: normal;
}
.navbar-nav > .context-menu > .dropdown-menu > li .menu {
  max-height: 200px;
  margin: 0;
  padding: 0;
  list-style: none;
  overflow-x: hidden;
}
.navbar-nav > .context-menu > .dropdown-menu > li .menu > li > a,
.navbar-nav > .context-menu > .dropdown-menu > li .menu > li > span.menu-actions > a {
  display: block;
  white-space: nowrap;
  /* Prevent text from breaking */
  border-bottom: 1px solid #f4f4f4;
}
.navbar-nav > .context-menu > .dropdown-menu > li .menu > li > a:hover,
.navbar-nav > .context-menu > .dropdown-menu > li .menu > li > span.menu-actions > a:hover {
  background: #f4f4f4;
  text-decoration: none;
}
.navbar-nav > .context-menu > .dropdown-menu > li .menu > li > a,
.navbar-nav > .context-menu > .dropdown-menu > li .menu > li > span.menu-actions > a {
  color: #444444;
  overflow: hidden;
  text-overflow: ellipsis;
  padding: 10px;
}
.navbar-nav > .context-menu > .dropdown-menu > li .menu > li > a > .ion {
  width: 20px;
}

/* Symfony Debugger */
.exception .container {width: auto !important;} 
pre.sf-dump {background: none !important; border: none !important;}
pre.sf-dump span.sf-dump-key {color: black !important;}
pre.sf-dump span.sf-dump-str {color: black !important;}
pre.sf-dump .sf-dump-private, pre.sf-dump .sf-dump-public, pre.sf-dump .sf-dump-protected {color: black !important;}

/* Bootstrap-Notify */
[data-notify="title"] {
	font-weight: bold;
}
[data-notify="message"] {
	padding-left: 10px;
}

/* Masonry, wichtig fuer Masonry-Layout. box-body ist das masonry-grid, da so die Groesse
   von Masonry angepasst wird. Padding (durch box-body) verringert jedoch die Groesse des
   Masonry-Grids, so dass die Elemente vorzeitig umgebrochen werden. Deshalb wird padding
   links/rechts hier auf 0 gesetzt. */
.box-body.grid {
	padding: 10px 0;
}

/* DataList & Menu */
.exf-menu > li > a {
  color: #777;
}
.exf-menu > li > a > .glyphicon,
.exf-menu > li > a > .fa,
.exf-menu > li > a > .ion {
  margin-right: 10px;
}
.exf-menu > li > a:hover {
  background-color: #e1e3e9;
  color: #333;
}
.exf-menu > .divider {
  background-color: #eee;
}
.exf-menu {
  width: 280px;
  padding: 0 0 0 0;
  margin: 0;
  top: 100%;
  position: absolute;
  z-index: 1000;
  float: left;
  min-width: 160px;
  font-size: 14px;
  text-align: left;
  list-style: none;
  list-style-type: none;
  list-style-position: initial;
  list-style-image: initial;
  background-color: #fff;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
}
.exf-menu > li {
  position: relative;
}
.exf-menu > li.header {
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
  background-color: #ffffff;
  padding: 7px 10px;
  border-bottom: 1px solid #f4f4f4;
  color: #444444;
  font-size: 14px;
}
.exf-menu > li.footer {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  font-size: 12px;
  background-color: #fff;
  padding: 7px 10px;
  border-bottom: 1px solid #eeeeee;
  color: #444 !important;
}
@media (max-width: 991px) {
  .exf-menu > li.footer > a {
    background: #fff !important;
    color: #444 !important;
  }
}
.exf-menu > li.footer > a:hover {
  text-decoration: none;
  font-weight: normal;
}
.exf-menu > li .menu {
  max-height: 200px;
  margin: 0;
  padding: 0;
  list-style: none;
  overflow-x: hidden;
}
.exf-menu > li .menu > li > a {
  display: block;
  white-space: nowrap;
  /* Prevent text from breaking */
  border-bottom: 1px solid #f4f4f4;
}
.exf-menu > li .menu > li > a:hover {
  background: #f4f4f4;
  text-decoration: none;
}
.exf-menu > li .menu > li > a > .ion {
  width: 20px;
}
.exf-menu > li .menu > li > a {
    color: #444444;
    overflow: hidden;
    text-overflow: ellipsis;
    padding: 10px;
    padding-top: 10px;
    padding-right: 10px;
    padding-bottom: 10px;
    padding-left: 10px;
}
.exf-menu > li > a {
    display: block;
    padding: 3px 20px;
    clear: both;
    font-weight: 400;
    line-height: 1.42857143;
    color: #333;
    white-space: nowrap;
}

